--- a/server/package.json
+++ b/server/package.json
@@ -27,11 +27,16 @@
     "express-handlebars": "^3.0.0",
     "handlebars-helpers": "^0.10.0",
     "handlebars-layouts": "^3.1.4",
+    "jslint": "^0.12.0",
     "mongoose": "^5.2.16",
     "mongose": "0.0.2-security",
     "morgan": "^1.9.1",
     "nodemon": "^1.18.4",
     "serve-favicon": "^2.5.0",
     "tsc": "^1.20150623.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.6.0",
+    "eslint-config-google": "^0.10.0"
   }
 }
