--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "lint": "./eslint $(PWD)",
+    "lint:fix": "eslint $(PWD) --fix",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "test": "echo \"Error: no test specified\" && exit 1",
